# data-workflow

./: README.md  pyproject.toml
data/processed/: analytics_table.parquet  metrics_daily.parquet  orders.parquet
reports/: final_report.csv
scripts/: run_day1_load.py  run_day3_build_analytics.py  run_day4_metrics.py  run_day5_report.py
src/data_workflow/: io.py  joins.py  metrics.py  quality.py  reporting.py  transforms.py
